<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context="com.jayhymn.smartchat.CoreActivty" android:id="@+id/core_parent" android:orientation="vertical">
    <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:id="@+id/viewpager" android:visibility="visible" android:layout_height="45dp">
        <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent" android:animateLayoutChanges="true"
                android:layout_height="wrap_content" android:id="@+id/tabLayout"
                app:tabIndicatorColor="@color/common_google_signin_btn_text_dark_default"
                app:tabTextColor="@android:color/background_light"
                app:tabMode="fixed" app:tabGravity="fill"
                app:tabIndicatorGravity="bottom"
                app:tabIndicatorHeight="4dp" app:tabMinWidth="50dp" app:tabPadding="0dp">
            <!--<com.google.android.material.tabs.TabItem-->
                    <!--android:layout_width="0dp" android:layout_gravity="start"-->
                    <!--android:icon="@android:drawable/ic_menu_camera"-->
                    <!--android:layout_weight="0.1"-->
                    <!--android:layout_height="wrap_content" android:id="@+id/cameraTab"/>-->
            <com.google.android.material.tabs.TabItem
                    android:layout_width="0dp" android:text="@string/string_viewpager_chats"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content" android:id="@+id/chatsTab"/>
            <com.google.android.material.tabs.TabItem
                    android:layout_width="0dp" android:text="@string/viewpager_status"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content" android:id="@+id/statusTab"/>
            <com.google.android.material.tabs.TabItem
                    android:layout_width="0dp" android:text="@string/viewpager_calls"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content" android:id="@+id/callsTab"/>
        </com.google.android.material.tabs.TabLayout>
    </androidx.viewpager.widget.ViewPager>
</LinearLayout>